Fixed bug #40703 (Resolved a possible namespace conflict between libxmlrpc and MySQL's NDB table handler).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@231156 c90b9560-bf6c-de11-be94-00142212c4b1